--- a/scss/sections/_mediaqueries.scss
+++ b/scss/sections/_mediaqueries.scss
@@ -1,7 +1,6 @@
-@media (max-width: 1200px){
+@media (max-width: 1600px){
 
-    /*--------------------  Menú de navegación y logo | 1200px --------------------*/
-    
+    /*--------------------  Menú de navegación y logo | 1600px --------------------*/
     
     .subtitulos_secciones{
         color: #7A7671;
@@ -33,14 +32,13 @@
     }
     
     
-    /*-------------------- Sección Reserva de turno | 1200px --------------------*/
+    /*-------------------- Sección Reserva de turno | 1600px --------------------*/
     
     .reserva_texto{
         font-size: 1rem;
-    }
-    
-    .reserva_texto h1{
-        font-size: 2.2rem;
+        h1{
+            font-size: 2.2rem;
+        }
     }
     
     .reserva_boton a{
@@ -48,21 +46,19 @@
     }
     
     
-    /*-------------------- Sección Reserva de turno | 1200px --------------------*/
+    /*-------------------- Sección Reserva de turno | 1600px --------------------*/
     
     
     
     .especialidad_categorias ul{
         text-align: center;
+        li{
+            padding: 20px;
+        }
     
     }
     
-    .especialidad_categorias li{
-        padding: 20px;
-    }
-    
-    
-    /*-------------------- Sección Beneficios | 1200px --------------------*/
+    /*-------------------- Sección Beneficios | 1600px --------------------*/
     
     .beneficios{
         display: grid;
@@ -74,16 +70,13 @@
         padding-top: 60px;
         padding-bottom: 60px;
         padding-left: 5%;
-    }
-    
-    
-    .beneficios h3{
-        font-size: 1.2rem;
-    }
-    
-    .beneficios p{
-        font-size: 1rem;
-        grid-area: beneficio_titulo;
+        h3{
+            font-size: 1.2rem;
+        }
+        p{
+            font-size: 1rem;
+            grid-area: beneficio_titulo;
+        }
     }
     
     .beneficio_1{
@@ -106,7 +99,7 @@
         grid-area: beneficio_4;
     }
     
-    /*-------------------- contacto.html | 1200px --------------------*/
+    /*-------------------- contacto.html | 1600px --------------------*/
     
     .contacto form input[type=submit]{
         margin-left: 280px;
@@ -114,8 +107,32 @@
     
     
     }
-    
-    
+
+
+    /*-------------------- contacto.html | 1400px --------------------*/
+
+
+    @media (max-width: 1400px){
+        .sucursales{
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+
+/*-------------------- contacto.html | 1024px --------------------*/
+
+
+    @media (max-width: 1024px){
+        .nuestra_historia{
+            .texto_imagen_historia{
+                display: flex;
+                flex-direction: column;
+            }
+        }
+
+    }
+
     /*-------------------------  768px -----------------------------*/
     
     
@@ -149,26 +166,22 @@
     
     .logo{
         justify-self: center;
-    }
-    
-    .logo img{
-        width:260px;
-    
-    }
-    
-    .nav_bar ul{
-        text-align: center;
-    }
-    
-    .nav_bar li{
-        font-size: 1.2rem;
-        display: inline-block;
-        padding-left: 35px;
-        padding-bottom: 15px;
-        padding-top: 20px;
-    
+        img{
+            width:260px;
+        }
     }
         
+    .nav_bar ul{
+        text-align: center;
+        li{
+            font-size: 1.2rem;
+            display: inline-block;
+            padding-left: 35px;
+            padding-bottom: 15px;
+            padding-top: 20px;
+        }
+    }
+    
     .search_bar{    
         padding: 5px;
     }
@@ -224,16 +237,13 @@
         padding-top: 60px;
         padding-bottom: 60px;
         padding-left: 5%;
-    }
-    
-    
-    .beneficios h3{
-        font-size: 1.2rem;
-    }
-    
-    .beneficios p{
-        font-size: 1rem;
-        grid-area: beneficio_titulo;
+        h3{
+            font-size: 1.2rem;
+        }
+        p{
+            font-size: 1rem;
+            grid-area: beneficio_titulo;
+        }
     }
     
     .beneficio_1{
@@ -281,11 +291,11 @@
     
     /*-------------------- Footer | 768px --------------------*/
     
-    footer_titulo h3{
+    .footer_titulo h3{
         font-size: 1.1rem;
     }
     
-    footer_copyright p{
+    .footer_copyright p{
         font-size: 1.1rem;
     }
     
@@ -314,34 +324,30 @@
         
     .servicio_1{
         padding-bottom: 30px;
+        p{
+            width: 200px;
+            text-align: center;
+            padding-top: 10px;
+        }
     }
-    
-    .servicio_1 p{
-        width: 200px;
-        text-align: center;
-        padding-top: 10px;
-    }
-    
+
     .servicio_2{
         padding-bottom: 30px;
-    }
-    
-    .servicio_2 p{
-        width: 200px;
-        text-align: center;
-        padding-top: 10px;
+        p{
+            width: 200px;
+            text-align: center;
+            padding-top: 10px;
+        }
     }
     
     .servicio_3{
         padding-bottom: 30px;
+        p{
+            width: 200px;
+            text-align: center;
+            padding-top: 10px;
+        }
     }
-    
-    .servicio_3 p{
-        width: 200px;
-        text-align: center;
-        padding-top: 10px;
-    }
-    
     
     
     /*-------------------- Sección Reserva de turno | 600px --------------------*/
@@ -359,11 +365,10 @@
     
     .beneficio_2 {
         padding-bottom: 40px;
-    }
-    
-    .beneficio_2 h3{
-        width: 190px;
-        text-align: center;
+        h3{
+            width: 190px;
+            text-align: center;
+        }
     }
     
     .beneficio_3 {
@@ -467,13 +472,12 @@
     
     .beneficio_2 {
         padding-bottom: 40px;
+        h3{
+            width: 190px;
+            text-align: center;
+        }
     }
-    
-    .beneficio_2 h3{
-        width: 190px;
-        text-align: center;
-    }
-    
+     
     .beneficio_3 {
         padding-bottom: 40px;
     }
@@ -487,13 +491,12 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        p{
+            width: 250px;
+        }
     
     }
-    
-    .opiniones p{
-        width: 250px;
-    }
-    
+
     .opinion_texto p{
        display: none;
     }
@@ -508,17 +511,14 @@
         flex-direction: column;
         padding: 0; 
         width: 440px;
-    }
-    
-    .opinion_paciente h4{
-        text-align: center;
-        width: 450px;
-    
-    }
-    
-    .opinion_paciente p{
-        width: 380px;
-        padding-left: 30px;
+        h4{
+            text-align: center;
+            width: 450px;
+        }
+        p{
+            width: 380px;
+            padding-left: 30px;
+        }
     }
     
     /*-------------------- contacto.html | 480px --------------------*/
@@ -550,19 +550,18 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-    
-    }
-        .reserva_texto h1{    
+        h1{    
             font-size: 30px;
             width: 320px;
             padding-top: 30px;
         }
-        
-        .reserva_texto p{
+        p{
             width: 300px;
             font-size:1.3rem;
             text-align: center;
         }
+    }
+        
         
         .reserva_imagen img{
             width: 300px;
@@ -621,13 +620,12 @@
     
     .beneficio_2 {
         padding-bottom: 40px;
+        h3{
+            width: 190px;
+            text-align: center;
+        }
     }
-    
-    .beneficio_2 h3{
-        width: 190px;
-        text-align: center;
-    }
-    
+        
     .beneficio_3 {
         padding-bottom: 40px;
     }
@@ -643,11 +641,9 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-    
-    }
-    
-    .opiniones p{
-        width: 250px;
+        p{
+            width: 250px;
+        }
     }
     
     .opinion_texto p{
@@ -664,18 +660,16 @@
         flex-direction: column;
         padding: 0; 
         width: 300px;
+        h4{
+            text-align: center;
+            width: 270px;
+        }
+        p{
+            width: 270px;
+        }
     }
-    
-    .opinion_paciente h4{
-        text-align: center;
-        width: 270px;
-    
-    }
-    
-    .opinion_paciente p{
-        width: 270px;
-    }
-    
+        
+ 
     /*-------------------- quienes_somos.html | 320px --------------------*/
     
     .nuestra_historia img{
