--- a/scss/sections/_profesionales.scss
+++ b/scss/sections/_profesionales.scss
@@ -5,6 +5,8 @@ main{
         padding-top: 20px;
         padding-bottom: 40px;
         img{
+            display: block;
+            margin: 0 auto;
             width: 500px;
             padding-top:35px;
             padding-left: 20px;
